mistakes corrected after checking the mentor

--- a/match-game/index.html
+++ b/match-game/index.html
@@ -42,7 +42,7 @@
                 </article>
             </section>
             <section>
-                <a href="preparing.html" id="button" class="button-next">Next</a>
+                <a href="preparing.html" id="button-play" class="button-next">Next</a>
             </section>
         </section>
         
