--- a/match-game/preparing.html
+++ b/match-game/preparing.html
@@ -11,7 +11,7 @@
 <body>
     <section id="notification" class="notification" hidden>
         <i id="close-notification" class="close fas fa-times"></i>
-        <article id="articleForNotification">
+        <article id="article-for-notification">
         </article>
     </section>
     <div id="wrapper">
@@ -31,9 +31,9 @@
                 <section id="skirt" class="skirts">
                     <h2>Choose the skirt:</h2>
                     <figure>
-                        <img src="images/preparing-page/programming-skirt.jpg" alt="programming-skirt">
-                        <img src="images/preparing-page/GOT.jpg" alt="GOT">
-                        <img src="images/preparing-page/space.jpg" alt="space">
+                        <img  src="images/preparing-page/programming-skirt.jpg" alt="programming-skirt">
+                        <img  src="images/preparing-page/GOT.jpg" alt="GOT">
+                        <img  src="images/preparing-page/space.jpg" alt="space">
                     </figure>
                 </section>
                 <section id="difficulty" class="game-difficulty">
@@ -46,12 +46,13 @@
                 </section>
             </section>
             <section>
-                <a href="#" id="button" class="button-play">Play</a>
+                <a href="#" id="button-play" class="button-play">Play</a>
             </section>
         </main>
     </div>
     
     <script src="js/app.js"></script>
+    <script src="js/classes/LocalStorage.js"></script>
     <script src="js/classes/Game.js"></script>
     <script src="js/classes/Timer.js"></script>
     <script src="js/classes/Card.js"></script>
